--- a/pickups.html
+++ b/pickups.html
@@ -227,8 +227,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jameson Williams/Matt Prater</td>
+<td width=50>11/23</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -339,7 +339,9 @@ Mike - Nyheim Hines/Irv Smith (11/5)<br>
 Mike - Allen Lazard Michael Thomas (11/5)<br>
 Sam - Wil Lutz/Rashod Bateman (11/10)<br>
 Randy - Kadarius Toney/Mecole Hardman (11/18)<br>
-John - Nick Folk/Zach Ertz (11/20)
+John - Nick Folk/Zach Ertz (11/20)<br>
+Sam - JK Dobbins/Chase Edmonds (11/22)<br>
+Matthew - Josh Palmer/Wan'Dale Robinson (11/22)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
