--- a/roster.html
+++ b/roster.html
@@ -98,9 +98,9 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Christian McCaffrey    </td></tr>
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
-<tr><td>DEN</td><td>Chase Edmonds          </td></tr>
 <tr><td>PIT</td><td>Najee Harris           </td></tr>
 <tr><td>CAR</td><td>D'Onta Foreman         </td></tr>
+<tr><td>BAL</td><td>JK Dobbins             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Davante Adams          </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
@@ -191,6 +191,7 @@
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
 <tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
+<tr><td>LAC</td><td>Josh Palmer            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
 <tr><td>LAR</td><td>Tyler Higbee           </td></tr>
@@ -199,7 +200,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Ken Walker             </td></tr>
 <tr><td>ATL</td><td>Desmond Ridder         </td></tr>
-<tr><td>NYG</td><td>Wan'Dale Robinson      </td></tr>
 <tr><td> NE</td><td>Bailey Zappe           </td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 </table>
@@ -226,10 +226,10 @@
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Ryan Succop            </td></tr>
-<tr><td>ARI</td><td>Matt Prater            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Drake London           </td></tr>
 <tr><td>TEN</td><td>Malik Willis           </td></tr>
+<tr><td>DET</td><td>Jameson Williams       </td></tr>
 </table>
 </td>
 <td valign=top>
