--- a/roster.html
+++ b/roster.html
@@ -219,7 +219,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
-<tr><td>BAL</td><td>Devin Duvernay         </td></tr>
 <tr><td> KC</td><td>Kadarius Toney         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
@@ -230,6 +229,7 @@
 <tr><td>ATL</td><td>Drake London           </td></tr>
 <tr><td>TEN</td><td>Malik Willis           </td></tr>
 <tr><td>DET</td><td>Jameson Williams       </td></tr>
+<tr><td>TEN</td><td>Caleb Shudak           </td></tr>
 </table>
 </td>
 <td valign=top>
