--- a/week12.html
+++ b/week12.html
@@ -9,9 +9,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mitchell</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Pacheco</td>       <td></td><td align=right>0</td></tr>
@@ -21,7 +21,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
-<tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>NHarris</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
@@ -57,7 +57,7 @@
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kmet</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Burks</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -80,11 +80,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Dulcich</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
@@ -116,7 +116,7 @@
 <tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>London</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Shudak</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -128,24 +128,24 @@
 <tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Palmer</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Likely</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
+<tr><td>JWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Boyd</td>          <td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Folk</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
 <tr><td>York</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
