--- a/week12.html
+++ b/week12.html
@@ -125,8 +125,8 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (7)</b></font></td></tr>
-<tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Perine</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Palmer</td>        <td></td><td align=right>0</td></tr>
