--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 <a href="week9.html"><b>9</b></a>
 <a href="week10.html"><b>10</b></a>
 <a href="week11.html"><b>11</b></a>
-<a href="week12.html"><b>12P</b></a><br>
+<a href="week12.html"><b>12</b></a>
+<a href="week13.html"><b>13P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -71,41 +72,41 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Steven(9)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>6980</font></td>
-    <td><font size=2>5225</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>7615</font></td>
+    <td><font size=2>5995</font></td>
     <td><font size=2>1235</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6530</font></td>
-    <td><font size=2>6280</font></td>
+    <td><font size=2>7275</font></td>
+    <td><font size=2>6940</font></td>
     <td><font size=2>845</font></td>
     <td><font size=2>435</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>7325</font></td>
-    <td><font size=2>6975</font></td>
+    <td><font size=2>8085</font></td>
+    <td><font size=2>7360</font></td>
     <td><font size=2>975</font></td>
     <td><font size=2>380</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7355</font></td>
-    <td><font size=2>6600</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>7660</font></td>
+    <td><font size=2>7320</font></td>
     <td><font size=2>1450</font></td>
-    <td><font size=2>375</font></td>
+    <td><font size=2>305</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(5)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>5225</font></td>
-    <td><font size=2>6335</font></td>
+    <td><font size=2>5945</font></td>
+    <td><font size=2>6640</font></td>
     <td><font size=2>850</font></td>
     <td><font size=2>260</font></td>
     <td><font size=2>0</font></td>
@@ -119,41 +120,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>7585</font></td>
-    <td><font size=2>7095</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>8245</font></td>
+    <td><font size=2>7840</font></td>
     <td><font size=2>1280</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>4</font></td>
-<tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>6840</font></td>
-    <td><font size=2>5630</font></td>
-    <td><font size=2>1175</font></td>
-    <td><font size=2>370</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6655</font></td>
-    <td><font size=2>7045</font></td>
-    <td><font size=2>825</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7495</font></td>
+    <td><font size=2>7480</font></td>
+    <td><font size=2>840</font></td>
     <td><font size=2>270</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>States(2)</font></td>
-    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>5740</font></td>
-    <td><font size=2>7050</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6510</font></td>
+    <td><font size=2>7685</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Randy(8)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>7275</font></td>
+    <td><font size=2>6470</font></td>
+    <td><font size=2>1175</font></td>
+    <td><font size=2>370</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>John(10)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>6310</font></td>
-    <td><font size=2>8310</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>6695</font></td>
+    <td><font size=2>9070</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>115</font></td>
     <td><font size=2>1</font></td>
