--- a/pickups.html
+++ b/pickups.html
@@ -341,7 +341,9 @@ Sam - Wil Lutz/Rashod Bateman (11/10)<br>
 Randy - Kadarius Toney/Mecole Hardman (11/18)<br>
 John - Nick Folk/Zach Ertz (11/20)<br>
 Sam - JK Dobbins/Chase Edmonds (11/22)<br>
-Matthew - Josh Palmer/Wan'Dale Robinson (11/22)
+Matthew - Josh Palmer/Wan'Dale Robinson (11/22)<br>
+John - Zonovan Knight/Allen Robinson (11/29)<br>
+States - Zamir White/Nick Sciba (11/29)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
