--- a/roster.html
+++ b/roster.html
@@ -57,7 +57,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>James Cook             </td></tr>
 <tr><td>WAS</td><td>Sam Howell             </td></tr>
-<tr><td>PIT</td><td>Nick Sciba             </td></tr>
+<tr><td> LV</td><td>Zamir White            </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -275,7 +275,6 @@
 <tr><td>MIA</td><td>Jeff Wilson            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
-<tr><td>LAR</td><td>Allen Robinson         </td></tr>
 <tr><td> KC</td><td>JuJu Smith-Schuster    </td></tr>
 <tr><td>CIN</td><td>Tyler Boyd             </td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
@@ -288,6 +287,7 @@
 <tr><td>CLE</td><td>Cade York              </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
 <tr><td> GB</td><td>Romeo Doubs            </td></tr>
+<tr><td>NYJ</td><td>Zonovan Knight         </td></tr>
 </table>
 </td>
 <td>
