--- a/pickups.html
+++ b/pickups.html
@@ -343,7 +343,8 @@ John - Nick Folk/Zach Ertz (11/20)<br>
 Sam - JK Dobbins/Chase Edmonds (11/22)<br>
 Matthew - Josh Palmer/Wan'Dale Robinson (11/22)<br>
 John - Zonovan Knight/Allen Robinson (11/29)<br>
-States - Zamir White/Nick Sciba (11/29)
+States - Zamir White/Nick Sciba (11/29)<br>
+Grant - Jordan Mason/Darnell Mooney (11/30)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
