--- a/roster.html
+++ b/roster.html
@@ -133,7 +133,6 @@
 <tr><td>LAC</td><td>Mike Williams          </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
-<tr><td>CHI</td><td>Darnell Mooney         </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
@@ -144,6 +143,7 @@
 <tr><td>LAR</td><td>Kyren Williams         </td></tr>
 <tr><td>DEN</td><td>Greg Dulcich           </td></tr>
 <tr><td> GB</td><td>Christian Watson       </td></tr>
+<tr><td> SF</td><td>Jordan Mason           </td></tr>
 </table>
 </td>
 <td valign=top>
