--- a/week13.html
+++ b/week13.html
@@ -43,7 +43,7 @@
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>-</td>             <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -70,7 +70,7 @@
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>GDavis</td>        <td></td><td align=right>0</td></tr>
+<tr><td>-</td>             <td></td><td align=right>0</td></tr>
 <tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Maher</td>         <td></td><td align=right>0</td></tr>
 <tr><td>DPierce</td>       <td></td><td align=right>0</td></tr>
@@ -146,7 +146,7 @@
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kmet</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Burks</td>         <td></td><td align=right>0</td></tr>
+<tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 <td></td><td></td>
