--- a/pickups.html
+++ b/pickups.html
@@ -344,7 +344,8 @@ Sam - JK Dobbins/Chase Edmonds (11/22)<br>
 Matthew - Josh Palmer/Wan'Dale Robinson (11/22)<br>
 John - Zonovan Knight/Allen Robinson (11/29)<br>
 States - Zamir White/Nick Sciba (11/29)<br>
-Grant - Jordan Mason/Darnell Mooney (11/30)
+Grant - Jordan Mason/Darnell Mooney (11/30)<br>
+Sam - Mike White/Clyde Edwards-Helaire (11/30)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
