--- a/roster.html
+++ b/roster.html
@@ -95,9 +95,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Sam (4)</b></font></td></tr>
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
 <tr><td>NYG</td><td>Daniel Jones           </td></tr>
+<tr><td>NYJ</td><td>Mike White             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Christian McCaffrey    </td></tr>
-<tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
 <tr><td>PIT</td><td>Najee Harris           </td></tr>
 <tr><td>CAR</td><td>D'Onta Foreman         </td></tr>
 <tr><td>BAL</td><td>JK Dobbins             </td></tr>
