--- a/week13.html
+++ b/week13.html
@@ -11,7 +11,7 @@
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Pacheco</td>       <td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
@@ -24,11 +24,11 @@
 <tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Shudak</td>        <td></td><td align=right>0</td></tr>
+<tr><td>London</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -36,14 +36,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (2)</b></font></td></tr>
-<tr><td>GSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
 <tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Freiermuth</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>-</td>             <td></td><td align=right>0</td></tr>
+<tr><td>ZWhite</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -80,11 +80,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JWilson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
+<tr><td>RWhite</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Boyd</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
 <tr><td>York</td>          <td></td><td align=right>0</td></tr>
