--- a/roster.html
+++ b/roster.html
@@ -135,7 +135,7 @@
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>ATL</td><td>Kyle Pitts             </td></tr>
+<tr><td>NYJ</td><td>Tyler Conklin          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Daniel Carlson         </td></tr>
 <tr><td height=9></td><td></td></tr>
