--- a/pickups.html
+++ b/pickups.html
@@ -345,7 +345,7 @@ Matthew - Josh Palmer/Wan'Dale Robinson (11/22)<br>
 John - Zonovan Knight/Allen Robinson (11/29)<br>
 States - Zamir White/Nick Sciba (11/29)<br>
 Grant - Jordan Mason/Darnell Mooney (11/30)<br>
-Sam - Mike White/Clyde Edwards-Helaire (11/30)
+Sam - Mike White/Clyde Edwards-Helaire (11/30)<br>
 Grant - Tyler Conklin/Kyle Pitts (12/4)
 </td></tr>
 <tr><td width=50>9/30</td>
