--- a/thousand.html
+++ b/thousand.html
@@ -525,6 +525,12 @@
     <td>1110</td>
     <td>Matthew</td>
     <td>895</td></tr>
+<tr><td>2022</td>
+    <td>Week 13</td>
+    <td>Steven Cohen</td>
+    <td>1110</td>
+    <td>Matthew</td>
+    <td>475</td></tr>
 <tr><td>2018</td>
     <td>Week 9</td>
     <td>Grant Mydland</td>
