--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <a href="week10.html"><b>10</b></a>
 <a href="week11.html"><b>11</b></a>
 <a href="week12.html"><b>12</b></a>
-<a href="week13.html"><b>13P</b></a><br>
+<a href="week13.html"><b>13</b></a>
+<a href="week14.html"><b>14P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -71,42 +72,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Steven(9)</font></td>
-    <td><font size=2>9</font></td>
+    <td><font size=2>10</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>7615</font></td>
-    <td><font size=2>5995</font></td>
+    <td><font size=2>8725</font></td>
+    <td><font size=2>6470</font></td>
     <td><font size=2>1235</font></td>
     <td><font size=2>280</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>7275</font></td>
-    <td><font size=2>6940</font></td>
+    <td><font size=2>7925</font></td>
+    <td><font size=2>7130</font></td>
     <td><font size=2>845</font></td>
     <td><font size=2>435</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>8085</font></td>
-    <td><font size=2>7360</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>8560</font></td>
+    <td><font size=2>8470</font></td>
     <td><font size=2>975</font></td>
     <td><font size=2>380</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>7660</font></td>
-    <td><font size=2>7320</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>8000</font></td>
+    <td><font size=2>7995</font></td>
     <td><font size=2>1450</font></td>
     <td><font size=2>305</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>5945</font></td>
-    <td><font size=2>6640</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>6585</font></td>
+    <td><font size=2>7570</font></td>
     <td><font size=2>850</font></td>
     <td><font size=2>260</font></td>
     <td><font size=2>0</font></td>
@@ -119,42 +120,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(4)</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>8245</font></td>
-    <td><font size=2>7840</font></td>
+    <td><font size=2>9175</font></td>
+    <td><font size=2>8480</font></td>
     <td><font size=2>1280</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>4</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7495</font></td>
-    <td><font size=2>7480</font></td>
+    <td><font size=2>8285</font></td>
+    <td><font size=2>8035</font></td>
     <td><font size=2>840</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>States(2)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>6510</font></td>
-    <td><font size=2>7685</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>7065</font></td>
+    <td><font size=2>8475</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>7275</font></td>
-    <td><font size=2>6470</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>7465</font></td>
+    <td><font size=2>7120</font></td>
     <td><font size=2>1175</font></td>
-    <td><font size=2>370</font></td>
+    <td><font size=2>190</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>6695</font></td>
-    <td><font size=2>9070</font></td>
+    <td><font size=2>7370</font></td>
+    <td><font size=2>9410</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>115</font></td>
     <td><font size=2>1</font></td>
