--- a/roster.html
+++ b/roster.html
@@ -282,12 +282,12 @@
 <tr><td> NO</td><td>Taysom Hill            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Jason Myers            </td></tr>
-<tr><td> NE</td><td>Nick Folk              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Cade York              </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
 <tr><td> GB</td><td>Romeo Doubs            </td></tr>
 <tr><td>NYJ</td><td>Zonovan Knight         </td></tr>
+<tr><td> SF</td><td>Brock Purdy            </td></tr>
 </table>
 </td>
 <td>
