--- a/week14.html
+++ b/week14.html
@@ -22,13 +22,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
 <tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>RWhite</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
+<tr><td>-</td>             <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>York</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -139,14 +139,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>London</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 <td></td><td></td>
