--- a/pickups.html
+++ b/pickups.html
@@ -368,4 +368,9 @@ John - CeeDee Lamb, Brandon McManus
 Rich - Diontae Johnson<br>
 Randy - Matt Prater
 </td></tr>
+<tr><td width=50>12/11</td>
+<td width=600>
+States - Cade York, Derek Carr<br>
+John - DeShaun Watson, Pat Freiermuth
+</td></tr>
 </table>
