--- a/week14.html
+++ b/week14.html
@@ -95,7 +95,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
