--- a/roster.html
+++ b/roster.html
@@ -55,9 +55,9 @@
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>James Cook             </td></tr>
-<tr><td>WAS</td><td>Sam Howell             </td></tr>
 <tr><td> LV</td><td>Zamir White            </td></tr>
 <tr><td>CLE</td><td>Cade York              </td></tr>
+<tr><td>TEN</td><td>Chigoziem Okonkwo      </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -220,6 +220,7 @@
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
 <tr><td> KC</td><td>Kadarius Toney         </td></tr>
+<tr><td>NYG</td><td>Darius Slayton         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td>MIN</td><td>TJ Hockenson           </td></tr>
@@ -229,7 +230,6 @@
 <tr><td>ATL</td><td>Drake London           </td></tr>
 <tr><td>TEN</td><td>Malik Willis           </td></tr>
 <tr><td>DET</td><td>Jameson Williams       </td></tr>
-<tr><td>TEN</td><td>Caleb Shudak           </td></tr>
 </table>
 </td>
 <td valign=top>
