--- a/pickups.html
+++ b/pickups.html
@@ -47,8 +47,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Chigoziem Okonkwo/Sam Howell</td>
+<td width=50>12/13</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -346,7 +346,8 @@ John - Zonovan Knight/Allen Robinson (11/29)<br>
 States - Zamir White/Nick Sciba (11/29)<br>
 Grant - Jordan Mason/Darnell Mooney (11/30)<br>
 Sam - Mike White/Clyde Edwards-Helaire (11/30)<br>
-Grant - Tyler Conklin/Kyle Pitts (12/4)
+Grant - Tyler Conklin/Kyle Pitts (12/4)<br>
+Randy - Darius Slayton/Caleb Shudak (12/14)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
