--- a/week15.html
+++ b/week15.html
@@ -41,9 +41,9 @@
 <tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
 <tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Okonkwo</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>York</td>          <td></td><td align=right>0</td></tr>
-<tr><td>ZWhite</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -132,7 +132,7 @@
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Dulcich</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mason</td>         <td></td><td align=right>0</td></tr>
+<tr><td>CWatson</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
