--- a/week15.html
+++ b/week15.html
@@ -23,10 +23,10 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (9)</b></font></td></tr>
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Carter</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>-</td>             <td></td><td align=right>0</td></tr>
+<tr><td>Kmet</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>GWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -69,11 +69,11 @@
 <tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kirk</td>          <td></td><td align=right>0</td></tr>
 <tr><td>GDavis</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kirk</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Everett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Maher</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DPierce</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Allgeier</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -125,7 +125,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Tagovailoa</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
@@ -143,7 +143,7 @@
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Palmer</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ridder</td>        <td></td><td align=right>0</td></tr>
